# ruff

./: Cargo.toml  bar.py  ruff.schema.json
.github/workflows/: release.yaml
a/: code.py
benches/: tokenizer.rs
crates/ruff/src/: codes.rs
crates/ruff/src/jupyter/: notebook.rs
crates/ruff_cli/: Cargo.toml
crates/ruff_cli/src/commands/: run.rs
crates/ruff_python_formatter/src/: lib.rs  trivia.rs
crates/ruff_python_formatter/src/comments/: placement.rs  visitor.rs
crates/ruff_python_formatter/src/expression/: expr_attribute.rs  expr_call.rs  expr_if_exp.rs  expr_slice.rs  expr_subscript.rs  expr_unary_op.rs
crates/ruff_python_formatter/src/snapshots/: ruff_python_formatter__tests__black_test__attribute_access_on_number_literals_py.snap  ruff_python_formatter__tests__black_test__collections_py.snap  ruff_python_formatter__tests__black_test__comments2_py.snap  ruff_python_formatter__tests__black_test__comments5_py.snap  ruff_python_formatter__tests__black_test__comments6_py.snap  (+11 more)
crates/ruff_python_parser/: Cargo.toml  README.md  build.rs
crates/ruff_python_parser/src/: context.rs  function.rs  lexer.rs  lib.rs  soft_keywords.rs  string.rs  token.rs
crates/ruff_python_parser/src/lexer/: cursor.rs  indentation.rs  mod.rs  token.rs
crates/ruff_python_resolver/: Cargo.toml
crates/ruff_python_resolver/foo/: bar.py  baz.py
crates/ruff_python_resolver/src/: import_result.rs  main.rs  native_module.rs  py_typed.rs
crates/ruff_python_semantic/src/: model.rs  scope.rs
src/: lib.rs
src/tokenizer/: whitespace_parser.rs
(+18 files in other folders)
